# Intelligent-SDR-Signal-Analyzer

./: .gitignore  README.md  dashboard.py  flowgraph.grc  setup.sh
gr-nrp/: CMakeLists.txt  MANIFEST.yml  nrp_signal_analyzer.block.yml  signal_analyzer.py
gr-nrp/.conda/: README.md
gr-nrp/.conda/recipe/: meta.yaml
gr-nrp/apps/: CMakeLists.txt
gr-nrp/cmake/Modules/: gnuradio-nrpConfig.cmake
gr-nrp/docs/: CMakeLists.txt  README.nrp
gr-nrp/docs/doxygen/: CMakeLists.txt  Doxyfile.in
gr-nrp/docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
gr-nrp/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-nrp/examples/: CMakeLists.txt
gr-nrp/grc/: CMakeLists.txt  nrp_adaptive_noise_profiler.block.yml  nrp_signal_analyzer.block.yml
gr-nrp/include/gnuradio/nrp/: CMakeLists.txt  api.h
gr-nrp/lib/: CMakeLists.txt
gr-nrp/python/: __init__.py  adaptive_noise_profiler.py
gr-nrp/python/nrp/: CMakeLists.txt  __init__.py  adaptive_noise_profiler.py  signal_analyzer.py
gr-nrp/python/nrp/bindings/: CMakeLists.txt  python_bindings.cc
